--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.4",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "numeral": "^2.0.6",
@@ -24,6 +26,7 @@
     "react-responsive": "^10.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.5",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
